Added support for integration tests, refactored testutils module and support for unit tests