@@ -65,36 +65,6 @@
         <heroku.maven.plugin.version>2.0.7</heroku.maven.plugin.version>
     </properties>
 
-    <profiles>
-        <!-- PROFILE GROUP: BUILD PROFILES -->
-        <profile>
-            <id>full-build</id>
-            <properties>
-                <maven.build.type>full-build</maven.build.type>
-            </properties>
-        </profile>
-        <profile>
-            <id>back-build</id>
-            <properties>
-                <maven.build.type>back-build</maven.build.type>
-            </properties>
-        </profile>
-
-        <!-- PROFILE GROUP: ENVIRONMENT PROFILES -->
-        <profile>
-            <id>local</id>
-            <properties>
-                <maven.environment>local</maven.environment>
-            </properties>
-        </profile>
-        <profile>
-            <id>heroku</id>
-            <properties>
-                <maven.environment>heroku</maven.environment>
-            </properties>
-        </profile>
-    </profiles>
-
     <dependencyManagement>
         <dependencies>
 
@@ -305,6 +275,8 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <configuration>
                         <forkCount>0</forkCount>
+                        <argLine>--illegal-access=permit</argLine>
+                        <groups>com.jakubeeee.testutils.marker.UnitTest</groups>
                     </configuration>
                 </plugin>
 
@@ -325,6 +297,16 @@
                         <archive>
                             <addMavenDescriptor>false</addMavenDescriptor>
                         </archive>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <configuration>
+                        <forkCount>0</forkCount>
+                        <argLine>--illegal-access=permit</argLine>
+                        <groups>com.jakubeeee.testutils.marker.IntegrationTest</groups>
                     </configuration>
                 </plugin>
 
@@ -379,16 +361,65 @@
         </pluginManagement>
 
         <plugins>
+
+            <!-- PLUGINS LAUNCHED BY EVERY CHILD MODULE -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
             </plugin>
+
             <plugin>
-                <groupId>org.basepom.maven</groupId>
-                <artifactId>duplicate-finder-maven-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
             </plugin>
+
         </plugins>
 
     </build>
+
+    <profiles>
+
+        <!-- PROFILE GROUP: BUILD PROFILES -->
+        <profile>
+            <id>full-build</id>
+            <properties>
+                <maven.build.type>full-build</maven.build.type>
+            </properties>
+        </profile>
+        <profile>
+            <id>back-build</id>
+            <properties>
+                <maven.build.type>back-build</maven.build.type>
+            </properties>
+        </profile>
+
+        <!-- PROFILE GROUP: ENVIRONMENT PROFILES -->
+        <profile>
+            <id>local</id>
+            <properties>
+                <maven.environment>local</maven.environment>
+            </properties>
+        </profile>
+        <profile>
+            <id>heroku</id>
+            <properties>
+                <maven.environment>heroku</maven.environment>
+            </properties>
+        </profile>
+
+        <!-- ADDITIONAL PROFILES -->
+        <profile>
+            <id>debug</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.basepom.maven</groupId>
+                        <artifactId>duplicate-finder-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+    </profiles>
 
 </project>
